# test_plugin_with_cmake

./: .gitignore  CMakeLists.txt  README.md  options.cmake  platform.cmake
calculator/: CMakeLists.txt  DLibrary.cpp  DLibrary.h  calculator.cpp  calculator.h  dir.cpp  dir.h  lib_export_common.h  lib_export_defines.h  libadd.cpp  libadd.h  libsub.cpp  libsub.h  plugin_manager.cpp  plugin_manager.h  uce-dirent.h
calculator/sdk/android/: maven_publish.gradle  settings.gradle
calculator/sdk/android/app/: build.gradle
calculator/sdk/android/app/src/main/cpp/: CMakeLists.txt
calculator/sdk/android/app/src/main/java/com/example/app/: MainActivity.java
calculator/sdk/android/calculator/: build.gradle
calculator/sdk/android/calculator/src/androidTest/java/com/example/calculator/: ExampleInstrumentedTest.java
calculator/sdk/android/calculator/src/main/cpp/: CMakeLists.txt  calculator_jni.cpp
calculator/sdk/android/calculator/src/main/java/com/example/calculator/: Calculator.java
calculator/sdk/android/gradle/wrapper/: gradle-wrapper.properties
calculator/sdk/ios/: CMakeLists.txt  CalculatorApple.h  CalculatorApple.mm  podspec.cmake
cmake/: options.cmake  platform.cmake  target.cmake
cmake/macros/: apple.cmake
cmake/scripts/: install_framework.sh
cmake/toolchains/apple/: check_toolchain.cmake  ios.toolchain.cmake
cmake/toolchains/apple/example/example-lib/: CMakeLists.txt
demo/: CMakeLists.txt
demo/android/: build.gradle  settings.gradle
demo/android/app/: build.gradle
demo/android/app/libs/: calculator-1.0.0.aar  calculator-1.0.0.pom
demo/android/app/src/main/cpp/: native-lib.cpp
demo/android/app/src/main/java/com/example/app/: MainActivity.java
demo/cli/linux/: main.cpp
demo/ios/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
demo/mac/: CMakeLists.txt  main.cpp
podspec/: calculator.podspec
